k8s/ingress-prod.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  labels:
    app: www
    branch: www
spec:
  rules:
  - host: www.incubateur.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: ${PORT}
  tls:
  - secretName: www-crt-secret
